ChironCore/turtparse/tlangParser.cpp

// Generated from tlang.g4 by ANTLR 4.13.2


#include "tlangVisitor.h"

#include "tlangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct TlangParserStaticData final {
  TlangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TlangParserStaticData(const TlangParserStaticData&) = delete;
  TlangParserStaticData(TlangParserStaticData&&) = delete;
  TlangParserStaticData& operator=(const TlangParserStaticData&) = delete;
  TlangParserStaticData& operator=(TlangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag tlangParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<TlangParserStaticData> tlangParserStaticData = nullptr;

void tlangParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (tlangParserStaticData != nullptr) {
    return;
  }
#else
  assert(tlangParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TlangParserStaticData>(
    std::vector<std::string>{
      "start", "instruction_list", "strict_ilist", "instruction", "conditional", 
      "ifConditional", "ifElseConditional", "loop", "gotoCommand", "assignment", 
      "moveCommand", "moveOp", "penCommand", "pauseCommand", "expression", 
      "multiplicative", "additive", "unaryArithOp", "condition", "binCondOp", 
      "logicOp", "value"
    },
    std::vector<std::string>{
      "", "'if'", "'['", "']'", "'else'", "'repeat'", "'goto'", "'('", "','", 
      "')'", "'='", "'forward'", "'backward'", "'left'", "'right'", "'penup'", 
      "'pendown'", "'pause'", "'+'", "'-'", "'*'", "'/'", "'pendown\\u003F'", 
      "'<'", "'>'", "'=='", "'!='", "'<='", "'>='", "'&&'", "'||'", "'!'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "PLUS", "MINUS", "MUL", "DIV", "PENCOND", "LT", "GT", "EQ", "NEQ", 
      "LTE", "GTE", "AND", "OR", "NOT", "NUM", "VAR", "NAME", "Whitespace"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tlangParserStaticData = std::move(staticData);
}

}

tlangParser::tlangParser(TokenStream *input) : tlangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

tlangParser::tlangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  tlangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tlangParserStaticData->atn, tlangParserStaticData->decisionToDFA, tlangParserStaticData->sharedContextCache, options);
}

tlangParser::~tlangParser() {
  delete _interpreter;
}

const atn::ATN& tlangParser::getATN() const {
  return *tlangParserStaticData->atn;
}

std::string tlangParser::getGrammarFileName() const {
  return "tlang.g4";
}

const std::vector<std::string>& tlangParser::getRuleNames() const {
  return tlangParserStaticData->ruleNames;
}

const dfa::Vocabulary& tlangParser::getVocabulary() const {
  return tlangParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView tlangParser::getSerializedATN() const {
  return tlangParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

tlangParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tlangParser::Instruction_listContext* tlangParser::StartContext::instruction_list() {
  return getRuleContext<tlangParser::Instruction_listContext>(0);
}

tree::TerminalNode* tlangParser::StartContext::EOF() {
  return getToken(tlangParser::EOF, 0);
}


size_t tlangParser::StartContext::getRuleIndex() const {
  return tlangParser::RuleStart;
}


std::any tlangParser::StartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitStart(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::StartContext* tlangParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, tlangParser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    instruction_list();
    setState(45);
    match(tlangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Instruction_listContext ------------------------------------------------------------------

tlangParser::Instruction_listContext::Instruction_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tlangParser::InstructionContext *> tlangParser::Instruction_listContext::instruction() {
  return getRuleContexts<tlangParser::InstructionContext>();
}

tlangParser::InstructionContext* tlangParser::Instruction_listContext::instruction(size_t i) {
  return getRuleContext<tlangParser::InstructionContext>(i);
}


size_t tlangParser::Instruction_listContext::getRuleIndex() const {
  return tlangParser::RuleInstruction_list;
}


std::any tlangParser::Instruction_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitInstruction_list(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::Instruction_listContext* tlangParser::instruction_list() {
  Instruction_listContext *_localctx = _tracker.createInstance<Instruction_listContext>(_ctx, getState());
  enterRule(_localctx, 2, tlangParser::RuleInstruction_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8590194786) != 0)) {
      setState(47);
      instruction();
      setState(52);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Strict_ilistContext ------------------------------------------------------------------

tlangParser::Strict_ilistContext::Strict_ilistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tlangParser::InstructionContext *> tlangParser::Strict_ilistContext::instruction() {
  return getRuleContexts<tlangParser::InstructionContext>();
}

tlangParser::InstructionContext* tlangParser::Strict_ilistContext::instruction(size_t i) {
  return getRuleContext<tlangParser::InstructionContext>(i);
}


size_t tlangParser::Strict_ilistContext::getRuleIndex() const {
  return tlangParser::RuleStrict_ilist;
}


std::any tlangParser::Strict_ilistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitStrict_ilist(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::Strict_ilistContext* tlangParser::strict_ilist() {
  Strict_ilistContext *_localctx = _tracker.createInstance<Strict_ilistContext>(_ctx, getState());
  enterRule(_localctx, 4, tlangParser::RuleStrict_ilist);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(53);
      instruction();
      setState(56); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8590194786) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

tlangParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tlangParser::AssignmentContext* tlangParser::InstructionContext::assignment() {
  return getRuleContext<tlangParser::AssignmentContext>(0);
}

tlangParser::ConditionalContext* tlangParser::InstructionContext::conditional() {
  return getRuleContext<tlangParser::ConditionalContext>(0);
}

tlangParser::LoopContext* tlangParser::InstructionContext::loop() {
  return getRuleContext<tlangParser::LoopContext>(0);
}

tlangParser::MoveCommandContext* tlangParser::InstructionContext::moveCommand() {
  return getRuleContext<tlangParser::MoveCommandContext>(0);
}

tlangParser::PenCommandContext* tlangParser::InstructionContext::penCommand() {
  return getRuleContext<tlangParser::PenCommandContext>(0);
}

tlangParser::GotoCommandContext* tlangParser::InstructionContext::gotoCommand() {
  return getRuleContext<tlangParser::GotoCommandContext>(0);
}

tlangParser::PauseCommandContext* tlangParser::InstructionContext::pauseCommand() {
  return getRuleContext<tlangParser::PauseCommandContext>(0);
}


size_t tlangParser::InstructionContext::getRuleIndex() const {
  return tlangParser::RuleInstruction;
}


std::any tlangParser::InstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitInstruction(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::InstructionContext* tlangParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 6, tlangParser::RuleInstruction);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(65);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tlangParser::VAR: {
        enterOuterAlt(_localctx, 1);
        setState(58);
        assignment();
        break;
      }

      case tlangParser::T__0: {
        enterOuterAlt(_localctx, 2);
        setState(59);
        conditional();
        break;
      }

      case tlangParser::T__4: {
        enterOuterAlt(_localctx, 3);
        setState(60);
        loop();
        break;
      }

      case tlangParser::T__10:
      case tlangParser::T__11:
      case tlangParser::T__12:
      case tlangParser::T__13: {
        enterOuterAlt(_localctx, 4);
        setState(61);
        moveCommand();
        break;
      }

      case tlangParser::T__14:
      case tlangParser::T__15: {
        enterOuterAlt(_localctx, 5);
        setState(62);
        penCommand();
        break;
      }

      case tlangParser::T__5: {
        enterOuterAlt(_localctx, 6);
        setState(63);
        gotoCommand();
        break;
      }

      case tlangParser::T__16: {
        enterOuterAlt(_localctx, 7);
        setState(64);
        pauseCommand();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionalContext ------------------------------------------------------------------

tlangParser::ConditionalContext::ConditionalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tlangParser::IfConditionalContext* tlangParser::ConditionalContext::ifConditional() {
  return getRuleContext<tlangParser::IfConditionalContext>(0);
}

tlangParser::IfElseConditionalContext* tlangParser::ConditionalContext::ifElseConditional() {
  return getRuleContext<tlangParser::IfElseConditionalContext>(0);
}


size_t tlangParser::ConditionalContext::getRuleIndex() const {
  return tlangParser::RuleConditional;
}


std::any tlangParser::ConditionalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitConditional(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::ConditionalContext* tlangParser::conditional() {
  ConditionalContext *_localctx = _tracker.createInstance<ConditionalContext>(_ctx, getState());
  enterRule(_localctx, 8, tlangParser::RuleConditional);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(67);
      ifConditional();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(68);
      ifElseConditional();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfConditionalContext ------------------------------------------------------------------

tlangParser::IfConditionalContext::IfConditionalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tlangParser::ConditionContext* tlangParser::IfConditionalContext::condition() {
  return getRuleContext<tlangParser::ConditionContext>(0);
}

tlangParser::Strict_ilistContext* tlangParser::IfConditionalContext::strict_ilist() {
  return getRuleContext<tlangParser::Strict_ilistContext>(0);
}


size_t tlangParser::IfConditionalContext::getRuleIndex() const {
  return tlangParser::RuleIfConditional;
}


std::any tlangParser::IfConditionalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitIfConditional(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::IfConditionalContext* tlangParser::ifConditional() {
  IfConditionalContext *_localctx = _tracker.createInstance<IfConditionalContext>(_ctx, getState());
  enterRule(_localctx, 10, tlangParser::RuleIfConditional);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(tlangParser::T__0);
    setState(72);
    condition(0);
    setState(73);
    match(tlangParser::T__1);
    setState(74);
    strict_ilist();
    setState(75);
    match(tlangParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfElseConditionalContext ------------------------------------------------------------------

tlangParser::IfElseConditionalContext::IfElseConditionalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tlangParser::ConditionContext* tlangParser::IfElseConditionalContext::condition() {
  return getRuleContext<tlangParser::ConditionContext>(0);
}

std::vector<tlangParser::Strict_ilistContext *> tlangParser::IfElseConditionalContext::strict_ilist() {
  return getRuleContexts<tlangParser::Strict_ilistContext>();
}

tlangParser::Strict_ilistContext* tlangParser::IfElseConditionalContext::strict_ilist(size_t i) {
  return getRuleContext<tlangParser::Strict_ilistContext>(i);
}


size_t tlangParser::IfElseConditionalContext::getRuleIndex() const {
  return tlangParser::RuleIfElseConditional;
}


std::any tlangParser::IfElseConditionalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitIfElseConditional(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::IfElseConditionalContext* tlangParser::ifElseConditional() {
  IfElseConditionalContext *_localctx = _tracker.createInstance<IfElseConditionalContext>(_ctx, getState());
  enterRule(_localctx, 12, tlangParser::RuleIfElseConditional);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(tlangParser::T__0);
    setState(78);
    condition(0);
    setState(79);
    match(tlangParser::T__1);
    setState(80);
    strict_ilist();
    setState(81);
    match(tlangParser::T__2);
    setState(82);
    match(tlangParser::T__3);
    setState(83);
    match(tlangParser::T__1);
    setState(84);
    strict_ilist();
    setState(85);
    match(tlangParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoopContext ------------------------------------------------------------------

tlangParser::LoopContext::LoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tlangParser::ValueContext* tlangParser::LoopContext::value() {
  return getRuleContext<tlangParser::ValueContext>(0);
}

tlangParser::Strict_ilistContext* tlangParser::LoopContext::strict_ilist() {
  return getRuleContext<tlangParser::Strict_ilistContext>(0);
}


size_t tlangParser::LoopContext::getRuleIndex() const {
  return tlangParser::RuleLoop;
}


std::any tlangParser::LoopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitLoop(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::LoopContext* tlangParser::loop() {
  LoopContext *_localctx = _tracker.createInstance<LoopContext>(_ctx, getState());
  enterRule(_localctx, 14, tlangParser::RuleLoop);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(tlangParser::T__4);
    setState(88);
    value();
    setState(89);
    match(tlangParser::T__1);
    setState(90);
    strict_ilist();
    setState(91);
    match(tlangParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GotoCommandContext ------------------------------------------------------------------

tlangParser::GotoCommandContext::GotoCommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tlangParser::ExpressionContext *> tlangParser::GotoCommandContext::expression() {
  return getRuleContexts<tlangParser::ExpressionContext>();
}

tlangParser::ExpressionContext* tlangParser::GotoCommandContext::expression(size_t i) {
  return getRuleContext<tlangParser::ExpressionContext>(i);
}


size_t tlangParser::GotoCommandContext::getRuleIndex() const {
  return tlangParser::RuleGotoCommand;
}


std::any tlangParser::GotoCommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitGotoCommand(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::GotoCommandContext* tlangParser::gotoCommand() {
  GotoCommandContext *_localctx = _tracker.createInstance<GotoCommandContext>(_ctx, getState());
  enterRule(_localctx, 16, tlangParser::RuleGotoCommand);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(tlangParser::T__5);
    setState(94);
    match(tlangParser::T__6);
    setState(95);
    expression(0);
    setState(96);
    match(tlangParser::T__7);
    setState(97);
    expression(0);
    setState(98);
    match(tlangParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

tlangParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tlangParser::AssignmentContext::VAR() {
  return getToken(tlangParser::VAR, 0);
}

tlangParser::ExpressionContext* tlangParser::AssignmentContext::expression() {
  return getRuleContext<tlangParser::ExpressionContext>(0);
}


size_t tlangParser::AssignmentContext::getRuleIndex() const {
  return tlangParser::RuleAssignment;
}


std::any tlangParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::AssignmentContext* tlangParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 18, tlangParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(tlangParser::VAR);
    setState(101);
    match(tlangParser::T__9);
    setState(102);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MoveCommandContext ------------------------------------------------------------------

tlangParser::MoveCommandContext::MoveCommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tlangParser::MoveOpContext* tlangParser::MoveCommandContext::moveOp() {
  return getRuleContext<tlangParser::MoveOpContext>(0);
}

tlangParser::ExpressionContext* tlangParser::MoveCommandContext::expression() {
  return getRuleContext<tlangParser::ExpressionContext>(0);
}


size_t tlangParser::MoveCommandContext::getRuleIndex() const {
  return tlangParser::RuleMoveCommand;
}


std::any tlangParser::MoveCommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitMoveCommand(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::MoveCommandContext* tlangParser::moveCommand() {
  MoveCommandContext *_localctx = _tracker.createInstance<MoveCommandContext>(_ctx, getState());
  enterRule(_localctx, 20, tlangParser::RuleMoveCommand);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    moveOp();
    setState(105);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MoveOpContext ------------------------------------------------------------------

tlangParser::MoveOpContext::MoveOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tlangParser::MoveOpContext::getRuleIndex() const {
  return tlangParser::RuleMoveOp;
}


std::any tlangParser::MoveOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitMoveOp(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::MoveOpContext* tlangParser::moveOp() {
  MoveOpContext *_localctx = _tracker.createInstance<MoveOpContext>(_ctx, getState());
  enterRule(_localctx, 22, tlangParser::RuleMoveOp);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 30720) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PenCommandContext ------------------------------------------------------------------

tlangParser::PenCommandContext::PenCommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tlangParser::PenCommandContext::getRuleIndex() const {
  return tlangParser::RulePenCommand;
}


std::any tlangParser::PenCommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitPenCommand(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::PenCommandContext* tlangParser::penCommand() {
  PenCommandContext *_localctx = _tracker.createInstance<PenCommandContext>(_ctx, getState());
  enterRule(_localctx, 24, tlangParser::RulePenCommand);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    _la = _input->LA(1);
    if (!(_la == tlangParser::T__14

    || _la == tlangParser::T__15)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PauseCommandContext ------------------------------------------------------------------

tlangParser::PauseCommandContext::PauseCommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tlangParser::PauseCommandContext::getRuleIndex() const {
  return tlangParser::RulePauseCommand;
}


std::any tlangParser::PauseCommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitPauseCommand(this);
  else
    return visitor->visitChildren(this);
}

tlangParser::PauseCommandContext* tlangParser::pauseCommand() {
  PauseCommandContext *_localctx = _tracker.createInstance<PauseCommandContext>(_ctx, getState());
  enterRule(_localctx, 26, tlangParser::RulePauseCommand);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(tlangParser::T__16);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

tlangParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tlangParser::ExpressionContext::getRuleIndex() const {
  return tlangParser::RuleExpression;
}

void tlangParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UnaryExprContext ------------------------------------------------------------------

tlangParser::UnaryArithOpContext* tlangParser::UnaryExprContext::unaryArithOp() {
  return getRuleContext<tlangParser::UnaryArithOpContext>(0);
}

tlangParser::ExpressionContext* tlangParser::UnaryExprContext::expression() {
  return getRuleContext<tlangParser::ExpressionContext>(0);
}

tlangParser::UnaryExprContext::UnaryExprContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any tlangParser::UnaryExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tlangVisitor*>(visitor))
    return parserVisitor->visitUnaryExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ValueExprContext ------------------------------------------------------------------

tlangParser::ValueContext* tlangParser::ValueExprContext::value() {
  return getRuleContext<tlangParser::ValueContext>(0);
}

tlangParser::ValueExprContext::ValueExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

